Rq클래스 생성 및 Action메서드 내부 교체